--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "buffer": "^5.7.1",
+    "console-browserify": "^1.2.0",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "process": "^0.11.10",
